# esp32-speaker

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  partitions.csv  sdkconfig
main/: AudioI2s.cpp  CMakeLists.txt  Kconfig.projbuild  SpeakerApp.cpp  SpeakerApp.h  UiMusicPlayer.cpp  UiMusicPlayer.h  idf_component.yml  main.c  main.cpp
main/audio/: AudioI2s.cpp  AudioI2s.h
main/common/: BlockingQueue.h
main/display/: LCDMgr.cpp  LCDMgr.h  LvglManager.cpp  LvglManager.h  TouchMgr.cpp  TouchMgr.h
main/fonts/: awsome_14.c
main/ui/: UiMusicPlayer.cpp  UiMusicPlayer.h
